--- a/res/values/cr_arrays.xml
+++ b/res/values/cr_arrays.xml
@@ -23,4 +23,17 @@
         <item>@string/security_settings_fingerprint_sensor_location_left</item>
         <item>@string/security_settings_fingerprint_sensor_location_right</item>
     </string-array>
+
+    <!-- Refresh rate -->
+    <string-array name="refresh_rate_entries">
+        <item>@string/auto_refresh_rate</item>
+        <item>60Hz</item>
+        <item>90Hz</item>
+    </string-array>
+    <string-array name="refresh_rate_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
 </resources>
