--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -101,6 +101,12 @@
     <com.android.settings.display.DensityPreference
         android:key="density"
         android:title="@string/developer_smallest_width" />
+    
+    <com.android.settings.carbon.GlobalSettingListPreference
+        android:key="refresh_rate_setting"
+        android:title="@string/refresh_rate_title"
+        android:entries="@array/refresh_rate_entries"
+        android:entryValues="@array/refresh_rate_values" />
 
     <SwitchPreference
         android:key="show_operator_name"
